Fix vertical spacing between message tiles

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -43,9 +43,11 @@ $left-gutter: 64px;
             right: 0;
         }
     }
+
     .mx_EventTile_receiptSent::before {
         mask-image: url('$(res)/img/element-icons/circle-sent.svg');
     }
+
     .mx_EventTile_receiptSending::before {
         mask-image: url('$(res)/img/element-icons/circle-sending.svg');
     }
@@ -114,7 +116,8 @@ $left-gutter: 64px;
     .mx_DisambiguatedProfile {
         color: $primary-content;
         font-size: $font-14px;
-        display: inline-block; /* anti-zalgo, with overflow hidden */
+        display: inline-block;
+        /* anti-zalgo, with overflow hidden */
         overflow: hidden;
         padding-bottom: 0px;
         padding-top: 0px;
@@ -141,7 +144,8 @@ $left-gutter: 64px;
         clear: both;
     }
 
-    .mx_EventTile_line, .mx_EventTile_reply {
+    .mx_EventTile_line,
+    .mx_EventTile_reply {
         position: relative;
         padding-left: $left-gutter;
         border-radius: 8px;
@@ -154,7 +158,7 @@ $left-gutter: 64px;
     /* this is used for the tile for the event which is selected via the URL.
      * TODO: ultimately we probably want some transition on here.
      */
-    &.mx_EventTile_selected > .mx_EventTile_line {
+    &.mx_EventTile_selected>.mx_EventTile_line {
         box-shadow: inset calc(50px + $selected-message-border-width) 0 0 -50px $accent;
         background-color: $event-selected-color;
     }
@@ -271,7 +275,7 @@ $left-gutter: 64px;
 }
 
 .mx_EventTile:not([data-layout=bubble]).mx_EventTile_info .mx_EventTile_line,
-.mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_GenericEventListSummary_unstyledList > .mx_EventTile_info .mx_EventTile_avatar ~ .mx_EventTile_line {
+.mx_GenericEventListSummary:not([data-layout=bubble])>.mx_GenericEventListSummary_unstyledList>.mx_EventTile_info .mx_EventTile_avatar~.mx_EventTile_line {
     padding-left: calc($left-gutter + 20px); // override padding-left $left-gutter
 }
 
@@ -301,12 +305,13 @@ $left-gutter: 64px;
     transition-duration: 0.5s;
 }
 
-.mx_EventTile_spoiler.visible > .mx_EventTile_spoiler_content {
+.mx_EventTile_spoiler.visible>.mx_EventTile_spoiler_content {
     filter: none;
 }
 
 .mx_RoomView_timeline_rr_enabled {
     .mx_EventTile[data-layout=group] {
+
         .mx_ThreadInfo,
         .mx_ThreadSummaryIcon,
         .mx_EventTile_line {
@@ -318,6 +323,7 @@ $left-gutter: 64px;
             max-width: min(calc(100% - $left-gutter - 110px), 600px); // leave space on both left & right gutters
         }
     }
+
     // on ELS we need the margin to allow interaction with the expand/collapse button which is normally in the RR gutter
 }
 
@@ -413,7 +419,8 @@ $left-gutter: 64px;
     background-repeat: no-repeat;
     background-size: contain;
 
-    &::before, &::after {
+    &::before,
+    &::after {
         content: "";
         display: block;
         position: absolute;
@@ -438,6 +445,7 @@ $left-gutter: 64px;
         mask-image: url('$(res)/img/e2e/warning.svg');
         background-color: $alert;
     }
+
     opacity: 1;
 }
 
@@ -446,6 +454,7 @@ $left-gutter: 64px;
         mask-image: url('$(res)/img/e2e/normal.svg');
         background-color: $header-panel-text-primary-color;
     }
+
     opacity: 1;
 }
 
@@ -484,7 +493,8 @@ $left-gutter: 64px;
     color: inherit; // inherit the colour from the dark or light theme by default (but not for code blocks)
     font-size: $font-14px;
 
-    pre, code {
+    pre,
+    code {
         font-family: $monospace-font-family !important;
         background-color: $codeblock-background-color;
     }
@@ -497,7 +507,7 @@ $left-gutter: 64px;
     pre code {
         white-space: pre; // we want code blocks to be scrollable and not wrap
 
-        > * {
+        >* {
             display: inline;
         }
     }
@@ -519,6 +529,7 @@ $left-gutter: 64px;
     float: left;
     margin: 0 0.5em 0 -1.5em;
     color: gray;
+
     & span {
         text-align: right;
         display: block;
@@ -552,18 +563,22 @@ $left-gutter: 64px;
     height: 19px;
     background-color: $message-action-bar-fg-color;
 }
+
 .mx_EventTile_buttonBottom {
     top: 33px;
 }
+
 .mx_EventTile_copyButton {
     mask-image: url($copy-button-url);
 }
+
 .mx_EventTile_collapseButton {
     mask-size: 75%;
     mask-position: center;
     mask-repeat: no-repeat;
     mask-image: url("$(res)/img/element-icons/minimise-collapse.svg");
 }
+
 .mx_EventTile_expandButton {
     mask-size: 75%;
     mask-position: center;
@@ -679,10 +694,13 @@ $left-gutter: 64px;
 }
 
 @media only screen and (max-width: 480px) {
-    .mx_EventTile_line, .mx_EventTile_reply {
+
+    .mx_EventTile_line,
+    .mx_EventTile_reply {
         padding-left: 0;
         margin-right: 0;
     }
+
     .mx_EventTile_content {
         margin-top: 10px;
         margin-right: 0;
@@ -764,7 +782,8 @@ $left-gutter: 64px;
         }
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         cursor: pointer;
         border-color: $quinary-content;
 
@@ -859,6 +878,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         &::after {
             content: unset;
         }
+
         margin-bottom: 0;
     }
 
@@ -930,7 +950,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
     .mx_EventTile {
         display: flex;
         flex-direction: column;
-        padding-top: 11px; // due to layout differences, this odd number matches the 18px padding-top of main tl events
+        padding-top: 14px; // due to layout differences, this odd number matches the 18px padding-top of main tl events
 
         .mx_EventTile_line {
             padding-left: 0;
